docs/1.7/13.md


# Scala API Extensions

In order to keep a fair amount of consistency between the Scala and Java APIs, some of the features that allow a high-level of expressiveness in Scala have been left out from the standard APIs for both batch and streaming.

If you want to _enjoy the full Scala experience_ you can choose to opt-in to extensions that enhance the Scala API via implicit conversions.

To use all the available extensions, you can just add a simple `import` for the DataSet API

<figure class="highlight">

```
import org.apache.flink.api.scala.extensions._
```

</figure>

or the DataStream API

<figure class="highlight">

```
import org.apache.flink.streaming.api.scala.extensions._
```

</figure>

Alternatively, you can import individual extensions _a-là-carte_ to only use those you prefer.

## Accept partial functions

Normally, both the DataSet and DataStream APIs don’t accept anonymous pattern matching functions to deconstruct tuples, case classes or collections, like the following:

<figure class="highlight">

```
val data: DataSet[(Int, String, Double)] = // [...] data.map {
  case (id, name, temperature) => // [...]
  // The previous line causes the following compilation error:
  // "The argument types of an anonymous function must be fully known. (SLS 8.5)" }
```

</figure>

This extension introduces new methods in both the DataSet and DataStream Scala API that have a one-to-one correspondence in the extended API. These delegating methods do support anonymous pattern matching functions.

#### DataSet API

| Method | Original | Example |
| --- | --- | --- |
| **mapWith** | **map (DataSet)** | 

&lt;figure class="highlight"&gt;

```
data.mapWith {
  case (_, value) =&gt; value.toString
}
```

&lt;/figure&gt;

 |
| **mapPartitionWith** | **mapPartition (DataSet)** | 

&lt;figure class="highlight"&gt;

```
data.mapPartitionWith {
  case head #:: _ =&gt; head
}
```

&lt;/figure&gt;

 |
| **flatMapWith** | **flatMap (DataSet)** | 

&lt;figure class="highlight"&gt;

```
data.flatMapWith {
  case (_, name, visitTimes) =&gt; visitTimes.map(name -&gt; _)
}
```

&lt;/figure&gt;

 |
| **filterWith** | **filter (DataSet)** | 

&lt;figure class="highlight"&gt;

```
data.filterWith {
  case Train(_, isOnTime) =&gt; isOnTime
}
```

&lt;/figure&gt;

 |
| **reduceWith** | **reduce (DataSet, GroupedDataSet)** | 

&lt;figure class="highlight"&gt;

```
data.reduceWith {
  case ((_, amount1), (_, amount2)) =&gt; amount1 + amount2
}
```

&lt;/figure&gt;

 |
| **reduceGroupWith** | **reduceGroup (GroupedDataSet)** | 

&lt;figure class="highlight"&gt;

```
data.reduceGroupWith {
  case id #:: value #:: _ =&gt; id -&gt; value
}
```

&lt;/figure&gt;

 |
| **groupingBy** | **groupBy (DataSet)** | 

&lt;figure class="highlight"&gt;

```
data.groupingBy {
  case (id, _, _) =&gt; id
}
```

&lt;/figure&gt;

 |
| **sortGroupWith** | **sortGroup (GroupedDataSet)** | 

&lt;figure class="highlight"&gt;

```
grouped.sortGroupWith(Order.ASCENDING) {
  case House(_, value) =&gt; value
}
```

&lt;/figure&gt;

 |
| **combineGroupWith** | **combineGroup (GroupedDataSet)** | 

&lt;figure class="highlight"&gt;

```
grouped.combineGroupWith {
  case header #:: amounts =&gt; amounts.sum
}
```

&lt;/figure&gt;

 |
| **projecting** | **apply (JoinDataSet, CrossDataSet)** | 

&lt;figure class="highlight"&gt;

```
data1.join(data2).
  whereClause(case (pk, _) =&gt; pk).
  isEqualTo(case (_, fk) =&gt; fk).
  projecting {
    case ((pk, tx), (products, fk)) =&gt; tx -&gt; products
  }

data1.cross(data2).projecting {
  case ((a, _), (_, b) =&gt; a -&gt; b
}
```

&lt;/figure&gt;

 |
| **projecting** | **apply (CoGroupDataSet)** | 

&lt;figure class="highlight"&gt;

```
data1.coGroup(data2).
  whereClause(case (pk, _) =&gt; pk).
  isEqualTo(case (_, fk) =&gt; fk).
  projecting {
    case (head1 #:: _, head2 #:: _) =&gt; head1 -&gt; head2
  }
}
```

&lt;/figure&gt;

 |

#### DataStream API

| Method | Original | Example |
| --- | --- | --- |
| **mapWith** | **map (DataStream)** | 

&lt;figure class="highlight"&gt;

```
data.mapWith {
  case (_, value) =&gt; value.toString
}
```

&lt;/figure&gt;

 |
| **mapPartitionWith** | **mapPartition (DataStream)** | 

&lt;figure class="highlight"&gt;

```
data.mapPartitionWith {
  case head #:: _ =&gt; head
}
```

&lt;/figure&gt;

 |
| **flatMapWith** | **flatMap (DataStream)** | 

&lt;figure class="highlight"&gt;

```
data.flatMapWith {
  case (_, name, visits) =&gt; visits.map(name -&gt; _)
}
```

&lt;/figure&gt;

 |
| **filterWith** | **filter (DataStream)** | 

&lt;figure class="highlight"&gt;

```
data.filterWith {
  case Train(_, isOnTime) =&gt; isOnTime
}
```

&lt;/figure&gt;

 |
| **keyingBy** | **keyBy (DataStream)** | 

&lt;figure class="highlight"&gt;

```
data.keyingBy {
  case (id, _, _) =&gt; id
}
```

&lt;/figure&gt;

 |
| **mapWith** | **map (ConnectedDataStream)** | 

&lt;figure class="highlight"&gt;

```
data.mapWith(
  map1 = case (_, value) =&gt; value.toString,
  map2 = case (_, _, value, _) =&gt; value + 1
)
```

&lt;/figure&gt;

 |
| **flatMapWith** | **flatMap (ConnectedDataStream)** | 

&lt;figure class="highlight"&gt;

```
data.flatMapWith(
  flatMap1 = case (_, json) =&gt; parse(json),
  flatMap2 = case (_, _, json, _) =&gt; parse(json)
)
```

&lt;/figure&gt;

 |
| **keyingBy** | **keyBy (ConnectedDataStream)** | 

&lt;figure class="highlight"&gt;

```
data.keyingBy(
  key1 = case (_, timestamp) =&gt; timestamp,
  key2 = case (id, _, _) =&gt; id
)
```

&lt;/figure&gt;

 |
| **reduceWith** | **reduce (KeyedStream, WindowedStream)** | 

&lt;figure class="highlight"&gt;

```
data.reduceWith {
  case ((_, sum1), (_, sum2) =&gt; sum1 + sum2
}
```

&lt;/figure&gt;

 |
| **foldWith** | **fold (KeyedStream, WindowedStream)** | 

&lt;figure class="highlight"&gt;

```
data.foldWith(User(bought = 0)) {
  case (User(b), (_, items)) =&gt; User(b + items.size)
}
```

&lt;/figure&gt;

 |
| **applyWith** | **apply (WindowedStream)** | 

&lt;figure class="highlight"&gt;

```
data.applyWith(0)(
  foldFunction = case (sum, amount) =&gt; sum + amount
  windowFunction = case (k, w, sum) =&gt; // [...] )
```

&lt;/figure&gt;

 |
| **projecting** | **apply (JoinedStream)** | 

&lt;figure class="highlight"&gt;

```
data1.join(data2).
  whereClause(case (pk, _) =&gt; pk).
  isEqualTo(case (_, fk) =&gt; fk).
  projecting {
    case ((pk, tx), (products, fk)) =&gt; tx -&gt; products
  }
```

&lt;/figure&gt;

 |

For more information on the semantics of each method, please refer to the [DataSet](//ci.apache.org/projects/flink/flink-docs-release-1.7/dev/batch/index.html) and [DataStream](//ci.apache.org/projects/flink/flink-docs-release-1.7/dev/datastream_api.html) API documentation.

To use this extension exclusively, you can add the following `import`:

<figure class="highlight">

```
import org.apache.flink.api.scala.extensions.acceptPartialFunctions
```

</figure>

for the DataSet extensions and

<figure class="highlight">

```
import org.apache.flink.streaming.api.scala.extensions.acceptPartialFunctions
```

</figure>

The following snippet shows a minimal example of how to use these extension methods together (with the DataSet API):

<figure class="highlight">

```
object Main {
  import org.apache.flink.api.scala.extensions._
  case class Point(x: Double, y: Double)
  def main(args: Array[String]): Unit = {
    val env = ExecutionEnvironment.getExecutionEnvironment
    val ds = env.fromElements(Point(1, 2), Point(3, 4), Point(5, 6))
    ds.filterWith {
      case Point(x, _) => x > 1
    }.reduceWith {
      case (Point(x1, y1), (Point(x2, y2))) => Point(x1 + y1, x2 + y2)
    }.mapWith {
      case Point(x, y) => (x, y)
    }.flatMapWith {
      case (x, y) => Seq("x" -> x, "y" -> y)
    }.groupingBy {
      case (id, value) => id
    }
  }
}
```

</figure>

